--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,13 +38,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-<<<<<<< HEAD
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
-=======
-    implementation "androidx.cardview:cardview:1.0.0"
->>>>>>> 30d17b1560785d5e28e84e52b88ce250cf8a8eb5
 }
