--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Kotlin"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".activity_block_detail"
+            android:name=".BlockDetailActivity"
             android:exported="false" />
         <activity
             android:name=".BlogItem"
