--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.Kotlin"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".AdminBusTicketActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".BlockDetailActivity"
             android:exported="false" />
         <activity
@@ -21,12 +30,8 @@
             android:exported="false"/>
         <activity
             android:name=".AdminBusCreateActivity"
-            android:exported="true">
-                        <intent-filter>
-                            <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                            <category android:name="android.intent.category.LAUNCHER" />
-                        </intent-filter>
         </activity>
         <activity
             android:name=".BlogItem"
