--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,21 +21,18 @@
             android:exported="false"/>
         <activity
             android:name=".AdminBusCreateActivity"
-            android:exported="true">
-                        <intent-filter>
-                            <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
+<!--                        <intent-filter>-->
+<!--                            <action android:name="android.intent.action.MAIN" />-->
 
-                            <category android:name="android.intent.category.LAUNCHER" />
-                        </intent-filter>
+<!--                            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--                        </intent-filter>-->
         </activity>
         <activity
             android:name=".BlogItem"
             android:exported="false" />
         <activity
             android:name=".ticket_item"
-            android:exported="false" />
-        <activity
-            android:name=".FacebookAuthActivity"
             android:exported="false" />
         <activity
             android:name=".FillBookingFormActivity"
@@ -52,11 +49,11 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <meta-data
