--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Kotlin"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".PersonalInformation"
+            android:exported="false" />
+        <activity
             android:name=".BlogActivity"
             android:exported="false" />
         <activity
