refactor: fix in fillbookingform activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".PersonalInformation"
             android:exported="false" />
         <activity
-            android:name=".BlogActivity"
+            android:name=".BlogManagementActivity"
             android:exported="false" />
         <activity
             android:name=".AdminBusTicketActivity"
