--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+    implementation "com.facebook.android:facebook-android-sdk:latest.release"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
