add format type when enter blog content

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kotlin"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".EditTextDetailActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -26,6 +29,7 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/blue" />
+
         <activity
             android:name=".ChooseSeatActivity"
             android:exported="false" />
