--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/hagopj13/node-express-boilerplate.git",
   "author": "Hagop Jamkojian <hagopj13@gmail.com>",
   "license": "MIT",
+  "type": "module",
   "engines": {
     "node": ">15 <=16"
   },
@@ -68,6 +69,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "node-fetch": "^3.3.1",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
