--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kotlin"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".Admin.Screen.BottomNavigation.BottomAdminNavigation"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
@@ -34,7 +37,7 @@
             android:exported="false" />
         <activity
             android:name=".User.Screen.BottomNavigate.BottomNavigation"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".BusSearch"
             android:exported="false" />
