--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     implementation "com.github.kittinunf.fuel:fuel:2.3.1"
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
 
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    annotationProcessor "com.github.bumptech.glide:compiler:4.11.0"
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
