--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "db:schema": "prisma db push --accept-data-loss",
+    "db:reset": "prisma migrate reset",
     "seed": "node prisma/seed/main.js",
     "start": "pm2 start ecosystem.config.json --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
